In machine_learning_template.ipynb > Summary section: Separate the subsections into individual markdown cells

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6334,8 +6334,14 @@
     "    - Encode categorical features:\n",
     "        - Nominal features: Use one-hot encoding with `sklearn` `OneHotEncoder`.\n",
     "        - Ordinal features: Use ordinal encoding with `sklearn` `OrdinalEncoder`.\n",
-    "    - Apply scaling and encoding together using `sklearn` `ColumnTransformer`.\n",
-    "\n",
+    "    - Apply scaling and encoding together using `sklearn` `ColumnTransformer`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc6a430b-44ae-42af-8c34-39eb7c4fc068",
+   "metadata": {},
+   "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
     "    <h2 style=\"margin:0px\">Exploratory Data Analysis (EDA)</h2>\n",
     "</div> \n",
@@ -6354,8 +6360,14 @@
     "        - Visualize relationships with scatterplots (`seaborn` `scatterplot`) or a scatterplot matrix (`matplotlib` `subplot`).\n",
     "    - **Numerical and categorical columns**:\n",
     "        - Explore relationships with group-wise statistics (e.g., mean or median by category) using `pandas` `groupby` and `describe`.\n",
-    "        - Visualize results with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`).\n",
-    "\n",
+    "        - Visualize results with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ed3fb7-2f25-4660-8e83-ec6fcd88120c",
+   "metadata": {},
+   "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
     "    <h2 style=\"margin:0px\">Modeling</h2>\n",
     "</div> \n",
@@ -6378,8 +6390,14 @@
     "- **Model prediction examples**:\n",
     "    - Show illustrative examples of model predictions with best, worst, and typical cases using `pandas`.\n",
     "- **Save the final model**:\n",
-    "    - Save the best-performing model as a .pkl file using `pickle`.\n",
-    "\n",
+    "    - Save the best-performing model as a .pkl file using `pickle`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7adf5748-f921-40ca-96b6-ae04d03c33b5",
+   "metadata": {},
+   "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
     "    <h2 style=\"margin:0px\">Next Steps</h2>\n",
     "</div> \n",
