--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6281,9 +6281,9 @@
     "try:\n",
     "    with open(\"models/final_model.pkl\", \"wb\") as file:\n",
     "        pickle.dump(final_model, file)\n",
-    "    print(\"Final model saved successfully\")\n",
+    "    print(\"Final model saved successfully.\")\n",
     "except Exception as e:\n",
-    "    print(f\"An error occurred while saving the final model: {e}}\")"
+    "    print(f\"An error occurred while saving the final model: {e}\")"
    ]
   },
   {
