In machine_learning_template.ipynb > EDA > Univariate EDA > Numerical Columns section: Replace example histogram matrix of 6 columns with plot_histogram_matrix function for usage on all numerical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1819,39 +1819,62 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Histogram matrix of all numerical columns. <br><br>\n",
-    "    💡 Example code for 6 histograms in a 2x3 matrix.\n",
+    "    📌 Histogram matrix of all numerical columns. \n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3800f59f-9b8e-4abc-95e2-0bb68a9f2526",
+   "id": "f3fdf247-c1cb-4dd5-9fb2-1d55172ea758",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the figure size\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# Iterate over the numerical columns\n",
-    "for i, column in enumerate(numerical_columns):\n",
-    "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
-    "    plt.subplot(2, 3, i + 1)\n",
+    "# Function to plot a histogram matrix of all numerical columns\n",
+    "def plot_histogram_matrix(df, numerical_columns, safe_to_file=False):\n",
+    "    # Calculate number of rows and columns for subplot grid\n",
+    "    n_plots = len(numerical_columns)\n",
+    "    n_cols = 3  \n",
+    "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
-    "    # Create histogram for the current column\n",
-    "    sns.histplot(X_train[column])\n",
+    "    # Set the figure size based on 4x3 inches per subplot\n",
+    "    plt.figure(figsize=(n_cols * 4, n_rows * 3))\n",
     "    \n",
-    "    # Add title and axes labels\n",
-    "    plt.title(column.title())\n",
-    "    plt.ylabel(\"Frequency\")\n",
-    "    plt.xlabel(\"\")\n",
+    "    # Iterate over all numerical columns\n",
+    "    for i, column in enumerate(numerical_columns):\n",
+    "        # Create subplot (current subplot i+1 because subplot indices start at 1)\n",
+    "        plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        \n",
+    "        # Create histogram for the current column\n",
+    "        sns.histplot(df[column])\n",
+    "        \n",
+    "        # Customize histogram title and axes labels\n",
+    "        plt.title(column.title().replace(\"_\", \" \"))\n",
+    "        plt.ylabel(\"Frequency\")\n",
+    "        plt.xlabel(\"\")\n",
+    "    \n",
+    "    # Adjust layout to prevent overlap\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save plot to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)  \n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Histogram matrix saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving histogram matrix: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving histogram matrix to file: '{image_path}' already exists.\")\n",
+    "            \n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
     "\n",
-    "# Adjust layout to prevent overlap\n",
-    "plt.tight_layout()\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# Example usage\n",
+    "plot_histogram_matrix(X_train, numerical_columns, safe_to_file=\"numerical_distributions_histograms.png\")"
    ]
   },
   {
