In machine_learning_template.ipynb > EDA > Univariate EDA > Categorical Columns section: Replace example bar plot matrix with plot_categorical_frequencies function for usage on all categorical and boolean columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1968,7 +1968,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Visualize Distributions</strong> <br> \n",
-    "    📌 Bar plot of a single categorical colum.\n",
+    "    📌 Bar plot that shows frequencies of a single categorical column.\n",
     "</div>"
    ]
   },
@@ -2001,7 +2001,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Horizontal bar plot of a single categorical colum. Useful for columns with high cardinality (i.e., a large number of unique categories).\n",
+    "    📌 Horizontal bar plot of a single categorical column. Useful for columns with high cardinality (i.e., a large number of unique categories).\n",
     "</div>"
    ]
   },
@@ -2042,45 +2042,81 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot matrix that shows frequencies of all categorical columns. <br><br>\n",
-    "    💡 Example code for 9 bar plots in a 3x3 matrix.\n",
+    "    📌 Bar plot matrix that shows frequencies of all categorical columns. \n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a35e39a4-2777-40f8-a3a4-0ed9fa81d6e1",
+   "id": "7bdcb5a6-90cb-49ef-94c1-73682ff31a07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the figure size\n",
-    "plt.figure(figsize=(12, 12))\n",
+    "# Imports\n",
+    "import matplotlib.ticker as mtick\n",
     "\n",
-    "# Iterate over all categorical and boolean columns\n",
-    "for i, column in enumerate(categorical_columns + boolean_columns):\n",
-    "    # Create a subplot in a 3x3 grid (current subplot i+1 because subplot indices start at 1)\n",
-    "    plt.subplot(3, 3, i + 1)\n",
+    "\n",
+    "# Function to visualize categorical frequencies of multiple columns with a bar plot matrix \n",
+    "def plot_categorical_frequencies(df, categorical_columns, safe_to_file=False):\n",
+    "    # Calculate number of rows and columns for subplot grid\n",
+    "    n_plots = len(categorical_columns)\n",
+    "    n_cols = 3  \n",
+    "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
-    "    # Calculate frequencies for the current column\n",
-    "    column_frequencies = X_train[column].value_counts(normalize=True)  # For absolute frequencies: normalize=False\n",
+    "    # Set the figure size based on 4x4 inches per subplot\n",
+    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
     "    \n",
-    "    # Create bar plot for the current column\n",
-    "    sns.barplot(x=column_frequencies.index, y=column_frequencies.values)\n",
+    "    # Iterate over all categorical columns\n",
+    "    for i, column in enumerate(categorical_columns):      \n",
+    "        # Create subplot (current subplot i+1 because subplot indices start at 1)\n",
+    "        plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        \n",
+    "        # Calculate frequencies for the current column\n",
+    "        column_frequencies = df[column].value_counts(normalize=True)  # False for absolute frequencies\n",
     "    \n",
-    "    # Add title and axes labels\n",
-    "    plt.title(column.title())\n",
-    "    plt.ylabel(\"Frequency\")\n",
-    "    plt.xlabel(\"\")\n",
+    "        # Format plot title\n",
+    "        plot_title = column.title().replace(\"_\", \" \")\n",
+    "    \n",
+    "        # Limit columns with more than 10 categories to 10 most frequent categories \n",
+    "        if len(column_frequencies) > 10:\n",
+    "            column_frequencies = column_frequencies.head(10)\n",
+    "            plot_title += \" (Top 10)\"\n",
+    "            plt.xticks(rotation=45, ha=\"right\")\n",
+    "        \n",
+    "        # Create bar plot for the current column\n",
+    "        ax = sns.barplot(x=column_frequencies.index, y=column_frequencies.values)\n",
+    "        \n",
+    "        # Customize bar plot axes labels and ticks\n",
+    "        plt.title(plot_title)\n",
+    "        plt.ylabel(\"Frequency\")\n",
+    "        plt.xlabel(\"\")\n",
+    "        ax.set_xticks(range(len(column_frequencies.index)))\n",
+    "        ax.set_xticklabels(str(label).title().replace(\"_\", \" \") for label in column_frequencies.index)\n",
+    "        ax.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=0))  # Format y-axis as 0-100%\n",
+    "            \n",
+    "    # Adjust layout to prevent overlap\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save the plot to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Bar plot matrix saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving bar plot matrix: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving bar plot matrix to file: '{image_path}' already exists.\")\n",
+    "    \n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
     "\n",
-    "    # Rotate x-axis tick labels by 45 degrees\n",
-    "    plt.xticks(rotation=45)\n",
     "\n",
-    "# Adjust layout to prevent overlap\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# Example usage\n",
+    "plot_categorical_frequencies(X_train, boolean_columns + categorical_columns, safe_to_file=\"categorical_frequencies_barplots.png\")"
    ]
   },
   {
