In machine_learning_template.ipynb > Summary > Template Overview section: Update text

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -39,9 +39,8 @@
     "        <li><strong>Data Preprocessing:</strong>\n",
     "            <ul>\n",
     "                <li>Load, clean, transform, and save data using <code>pandas</code> and <code>sklearn</code>.</li>\n",
-    "                <li>Handle duplicates, incorrect data types, missing values, and outliers.</li>\n",
-    "                <li>Extract features, scale numerical features, and encode categorical features.</li>\n",
-    "                <li>Split data into training, validation, and test sets.</li>\n",
+    "                <li>Handle duplicates, data types, missing values, and outliers.</li>\n",
+    "                <li>Perform train-validation-test split, feature engineering, scaling, and encoding.</li>\n",
     "            </ul>\n",
     "        </li>\n",
     "        <li><strong>Exploratory Data Analysis (EDA):</strong>\n",
@@ -53,8 +52,8 @@
     "        <li><strong>Modeling:</strong>\n",
     "            <ul>\n",
     "                <li>Train baseline models and perform hyperparameter tuning for regression and classification tasks with <code>sklearn</code> and <code>xgboost</code>.</li>\n",
-    "                <li>Evaluate regression (RMSE, MAPE, R-squared) and classification models (accuracy, precision, recall, F1-score).</li>\n",
-    "                <li>Visualize feature importance, show model prediction examples, and save the final model with <code>pickle</code>.</li>\n",
+    "                <li>Evaluate model performance for regression (RMSE, MAPE, R-squared) and classification (accuracy, precision, recall, F1-score).</li>\n",
+    "                <li>Visualize feature importance, show model prediction examples, and save the final model.</li>\n",
     "            </ul>\n",
     "        </li>\n",
     "    </ul>\n",
