In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Numerical > Correlations section: Wrap code to plot correlation heatmap in a function and customize axes tick labels

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -135,7 +135,7 @@
     "- Data Preprocessing:\n",
     "  - Load, clean, transform, and save data using `pandas` and `sklearn`.\n",
     "  - Handle duplicates, data types, missing values, and outliers.\n",
-    "  - Extract features, scale numerical features, and encode categorical features.\n",
+    "  - Perform train-validation-test split, feature engineering, scaling, and encoding.\n",
     "- Exploratory Data Analysis (EDA):\n",
     "  - Analyze descriptive statistics using `pandas` and `numpy`.\n",
     "  - Visualize distributions, correlations, and relationships using `seaborn` and `matplotlib`.\n",
@@ -2163,48 +2163,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48adccf6-2fde-4f6e-bff1-ba0b9aa53413",
+   "id": "6947c5f9-8b59-46fa-aaae-a705aeb0e2b3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to plot correlation heatmap \n",
+    "def plot_correlation_heatmap(df, numerical_columns, safe_to_file=False):\n",
+    "    # Create correlation matrix and round to 2 decimals\n",
+    "    correlation_matrix = round(df[numerical_columns].corr(), 2) \n",
+    "    \n",
+    "    # Create upper triangle mask (k=1 excludes diagonal)\n",
+    "    mask = np.triu(np.ones(correlation_matrix.shape), k=1).astype(bool) \n",
+    "    \n",
+    "    # Set upper triangle to NaN to avoid redundancy\n",
+    "    correlation_matrix[mask] = np.nan\n",
+    "\n",
+    "    # Set the figure size\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "\n",
+    "    # Create heatmap\n",
+    "    ax = sns.heatmap(\n",
+    "        correlation_matrix, \n",
+    "        cmap=\"viridis\",  # Colorblind-friendly colormap (other options: \"cividis\", \"magma\", \"YlOrBr\", \"RdBu\") \n",
+    "        annot=True,  # Show correlation values\n",
+    "        fmt=\".2f\",  # Ensure uniform decimal formatting\n",
+    "        linewidth=0.5  # Thin white lines between cells\n",
+    "    )\n",
+    "\n",
+    "    # Customize title and axes tick labels\n",
+    "    plt.title(\"Correlation Heatmap\", fontsize=14)\n",
+    "    formatted_column_names = correlation_matrix.columns.str.title().str.replace(\"_\", \" \") \n",
+    "    ax.set_xticklabels(formatted_column_names)\n",
+    "    ax.set_yticklabels(formatted_column_names)\n",
+    "    \n",
+    "    # Adjust layout to prevent overlap\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save heatmap to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)  \n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:    \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Correlation heatmap saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving correlation heatmap: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving correlation heatmap: '{image_path}' already exists.\")\n",
+    "        \n",
+    "    # Show heatmap\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
     "# Merge X_train and y_train to have all numerical columns (including features and target variable) in a single DataFrame\n",
     "df_train = pd.concat([X_train, y_train], axis=1)\n",
     "\n",
-    "# Create correlation matrix and round to 2 decimals\n",
-    "correlation_matrix = round(df_train[numerical_columns + boolean_columns].corr(), 2)\n",
-    "\n",
-    "# Create upper triangle mask (k=1 excludes diagonal)\n",
-    "mask = np.triu(np.ones(correlation_matrix.shape), k=1).astype(bool) \n",
-    "\n",
-    "# Set upper triangle to NaN to avoid redundancy\n",
-    "correlation_matrix[mask] = np.nan\n",
-    "\n",
-    "# Create heatmap\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "sns.heatmap(\n",
-    "    correlation_matrix, \n",
-    "    cmap=\"viridis\",  # Colorblind-friendly colormap (other options: \"cividis\", \"magma\", \"YlOrBr\", \"RdBu\") \n",
-    "    annot=True,  # Show correlation values\n",
-    "    linewidth=0.5  # Thin white lines between cells\n",
-    ")\n",
-    "plt.title(\"Correlation Heatmap\")\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# Save heatmap to file\n",
-    "os.makedirs(\"images\", exist_ok=True)  \n",
-    "try:\n",
-    "    image_path = os.path.join(\"images\", \"correlation_heatmap.png\")  # In \"images\" directory as .png file \n",
-    "    plt.savefig(\n",
-    "        image_path, \n",
-    "        bbox_inches=\"tight\",  # Removes unnecessary whitespace\n",
-    "        dpi=144  # Good balance of quality vs. file size\n",
-    "    )\n",
-    "    print(f\"Correlation heatmap saved successfully to {image_path}\")\n",
-    "except Exception as e:\n",
-    "    print(f\"Error saving correlation heatmap: {e}\")\n",
-    "\n",
-    "# Show heatmap\n",
-    "plt.show()"
+    "# Use function to plot correlation heatmap of all numerical and boolean columns in training data\n",
+    "plot_correlation_heatmap(df_train, numerical_columns + boolean_columns, safe_to_file=\"correlation_heatmap.png\")"
    ]
   },
   {
