In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Numerical > Correlations section: Add function to visualize feature target correlations using a bar plot

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2241,7 +2241,64 @@
    "outputs": [],
    "source": [
     "# Feature-target correlations sorted by absolute values in descending order \n",
-    "df_train[numerical_columns + boolean_columns].corr()[\"numerical_target\"].sort_values(key=abs, ascending=False)"
+    "feature_target_correlations = df_train[numerical_columns + boolean_columns].corr()[\"numerical_target\"].sort_values(key=abs, ascending=False)\n",
+    "feature_target_correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dedbc9c5-2f2b-411f-afcd-ee50b30f8bae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to visualize feature-target correlations using a bar plot\n",
+    "def plot_feature_target_correlations(feature_target_correlations, y_min=-1, y_max=1, safe_to_file=False):\n",
+    "    # Remove target variable self-correlation\n",
+    "    feature_target_correlations = feature_target_correlations[1:]\n",
+    "    \n",
+    "    # Set figure size\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    \n",
+    "    # Create bar plot\n",
+    "    ax = sns.barplot(x=feature_target_correlations.index, y=feature_target_correlations.values)  # for pandas Series\n",
+    "\n",
+    "    # Add horizontal line\n",
+    "    ax.axhline(0, color=\"gray\", alpha=0.5, linewidth=0.8)\n",
+    "    \n",
+    "    # Add value labels\n",
+    "    ax.bar_label(ax.containers[0], fmt=\"%.2f\", padding=3, fontsize=10)\n",
+    "    \n",
+    "    # Customize title, axes labels and ticks\n",
+    "    plt.title(\"Feature-Target Correlations\", fontsize=14)\n",
+    "    plt.ylabel(\"Correlation\", fontsize=12)\n",
+    "    plt.xlabel(\"\")\n",
+    "    plt.yticks(np.arange(y_min, y_max + 0.2, 0.2), fontsize=10)\n",
+    "    formatted_xtick_labels = [label.title().replace(\"_\", \" \") for label in feature_target_correlations.index]\n",
+    "    plt.xticks(ticks=range(len(formatted_xtick_labels)), labels=formatted_xtick_labels, rotation=45, ha=\"right\", fontsize=11)\n",
+    "    \n",
+    "    # Adjust layout\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save plot to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Feature-target correlations bar plot saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving feature-target correlations bar plot: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving feature-target correlations bar plot to file: '{image_path}' already exists.\")\n",
+    "    \n",
+    "    # Show plot\n",
+    "    plt.show()\n",
+    "\n",
+    "    \n",
+    "# Use function to plot feature-target correlations of training data\n",
+    "plot_feature_target_correlations(feature_target_correlations, y_min=-0.5, y_max=0.5, safe_to_file=\"feature_target_correlations.png\")"
    ]
   },
   {
