In machine_learning_template.ipynb > EDA > Univariate EDA > Categorical Columns section: Add max_categories parameter to dynamically adjust number of bars in plot_categorical_frequencies function

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2048,16 +2048,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdcb5a6-90cb-49ef-94c1-73682ff31a07",
+   "id": "4c8e4a00-f83a-438a-929c-72bba321fb20",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import matplotlib.ticker as mtick\n",
     "\n",
-    "\n",
-    "# Function to visualize categorical frequencies of multiple columns with a bar plot matrix \n",
-    "def plot_categorical_frequencies(df, categorical_columns, safe_to_file=False):\n",
+    "# Function to visualize categorical frequencies with a bar plot matrix \n",
+    "def plot_categorical_frequencies(df, categorical_columns, max_categories=5, safe_to_file=False):\n",
     "    # Calculate number of rows and columns for subplot grid\n",
     "    n_plots = len(categorical_columns)\n",
     "    n_cols = 3  \n",
@@ -2077,23 +2076,28 @@
     "        # Format plot title\n",
     "        plot_title = column.title().replace(\"_\", \" \")\n",
     "    \n",
-    "        # Limit columns with more than 10 categories to 10 most frequent categories \n",
-    "        if len(column_frequencies) > 10:\n",
-    "            column_frequencies = column_frequencies.head(10)\n",
-    "            plot_title += \" (Top 10)\"\n",
+    "        # Limit number of categories for better readability  \n",
+    "        if len(column_frequencies) > max_categories:\n",
+    "            column_frequencies = column_frequencies.head(max_categories)\n",
+    "            plot_title += f\" (Top {max_categories})\"\n",
     "            plt.xticks(rotation=45, ha=\"right\")\n",
     "        \n",
     "        # Create bar plot for the current column\n",
     "        ax = sns.barplot(x=column_frequencies.index, y=column_frequencies.values)\n",
     "        \n",
+    "        # Add value labels\n",
+    "        value_labels = [f\"{value * 100:.1f}%\" for value in column_frequencies.values]\n",
+    "        ax.bar_label(ax.containers[0], labels=value_labels, padding=2, fontsize=10 if len(column_frequencies) <= 6 else 7)  \n",
+    "            \n",
     "        # Customize bar plot axes labels and ticks\n",
     "        plt.title(plot_title)\n",
     "        plt.ylabel(\"Frequency\")\n",
     "        plt.xlabel(\"\")\n",
     "        ax.set_xticks(range(len(column_frequencies.index)))\n",
     "        ax.set_xticklabels(str(label).title().replace(\"_\", \" \") for label in column_frequencies.index)\n",
-    "        ax.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=0))  # Format y-axis as 0-100%\n",
-    "            \n",
+    "        ax.set_ylim(0, column_frequencies.max() * 1.1)  # set y-axis from 0 to 10% above maximum frequency\n",
+    "        ax.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=0))  # format y-axis as percent\n",
+    "\n",
     "    # Adjust layout to prevent overlap\n",
     "    plt.tight_layout()\n",
     "    \n",
@@ -2114,8 +2118,8 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "# Example usage\n",
-    "plot_categorical_frequencies(X_train, boolean_columns + categorical_columns, safe_to_file=\"categorical_frequencies_barplots.png\")"
+    "# Use function to visualize categorical frequencies of all boolean and categorical columns in training data\n",
+    "plot_categorical_frequencies(X_train, boolean_columns + categorical_columns, max_categories=8, safe_to_file=\"categorical_frequencies_barplots.png\")"
    ]
   },
   {
