--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2641,81 +2641,54 @@
    "source": [
     "<div style=\"background-color:#5f9ade; color:white; padding:8px; border-radius:6px;\">\n",
     "    <h4 style=\"margin:0px\">Contingency Tables</h4>\n",
-    "</div>\n",
+    "</div> \n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Contingency table between two categorical columns. \n",
-    "</div>"
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">📌 Contingency tables between all categorical features and the categorical target variable.</p> "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5924a18e-26e9-443a-a635-1c5d2173f8e0",
+   "id": "10a65e47-bf27-4bce-8f23-192e09146b4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Contingency table with relative frequencies (%)\n",
-    "contingency_table = pd.crosstab(df_train[\"categorical_column_1\"], df_train[\"categorical_column_2\"], normalize=True) * 100\n",
-    "contingency_table"
+    "# Show all categorical and boolean columns with number of unique categories\n",
+    "df_train[categorical_columns + boolean_columns].nunique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f82d664d-56aa-44d0-bf65-f9b67af0ce3c",
+   "id": "79050d49-2e56-41e5-8b97-ccd2e19c297d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Heatmap of contingency table\n",
-    "sns.heatmap(\n",
-    "    contingency_table, \n",
-    "    cmap=\"viridis\",  # Colorblind-friendly colormap (other options: \"cividis\", \"magma\", \"YlOrBr\", \"RdBu\") \n",
-    "    annot=True,  # Show frequencies (%)\n",
-    "    fmt=\".1f\",  # Format as float with 1 decimal\n",
-    "    linewidth=0.5  # Thin white lines between cells\n",
-    ")\n",
-    "plt.title(f\"{contingency_table.index.name.title().replace('_', ' ')} vs. {contingency_table.columns.name.title().replace('_', ' ')}\")\n",
-    "plt.xlabel(contingency_table.index.name.title().replace('_', ' '))\n",
-    "plt.ylabel(contingency_table.columns.name.title().replace('_', ' '))\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "227165f0-b70e-40a2-ad50-28e416423e8b",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Contingency tables between all pairs of categorical columns. \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a4272a1-137c-4438-aa13-c362a15b6a7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports\n",
-    "import itertools\n",
+    "# Function to create contingency tables between each categorical feature and a single categorical target variable \n",
+    "def calculate_feature_target_crosstabs(df, categorical_columns, target_variable, normalize=\"index\"):\n",
+    "    # Dictionary to store contingency tables\n",
+    "    contingency_tables = {}\n",
+    "    \n",
+    "    # Get all possible pairs of the target variable with the categorical features\n",
+    "    feature_target_pairs = [(feature, target_variable) for feature in categorical_columns if feature != target_variable]\n",
+    "    \n",
+    "    # Iterate over each feature-target pair\n",
+    "    for feature, target in feature_target_pairs:\n",
+    "        # Create contingency table (normalize=\"index\" gives percentage distribution of the target variable within each category of the feature)\n",
+    "        contingency_tables[(feature, target)] = pd.crosstab(df[feature], df[target], normalize=normalize)\n",
     "\n",
-    "# Dictionary to store contingency tables\n",
-    "contingency_table_dict = {}\n",
+    "    return contingency_tables\n",
     "\n",
-    "# Get all possible pairs of categorical and boolean columns\n",
-    "categorical_column_pairs = tuple(itertools.combinations(categorical_columns + boolean_columns, 2))\n",
     "\n",
-    "# Create contingency tables for all column pairs\n",
-    "for column_1, column_2 in categorical_column_pairs:\n",
-    "    contingency_table_dict[(column_1, column_2)] = pd.crosstab(df_train[column_1], df_train[column_2], normalize=True) * 100\n",
+    "# Use function to create contingency tables between the target variable and each categorical or boolean feature in the training data\n",
+    "contingency_tables = calculate_feature_target_crosstabs(df_train, categorical_columns + boolean_columns, target_variable=\"categorical_target\")\n",
     "\n",
-    "# Show contingency tables\n",
-    "for column_pair, contigeny_table in contingency_table_dict.items():\n",
-    "    print(f\"\\nContingency Table: {column_pair[0].title().replace('_', ' ')} vs. {column_pair[1].title().replace('_', ' ')}\")\n",
-    "    print(contigeny_table)"
+    "# Display a single feature-target contingency table (formatted as percent with 1 decimal)\n",
+    "display(contingency_tables[(\"categorical_feature\", \"categorical_target\")].map(lambda x: f\"{x * 100:.1f}\"))\n",
+    "\n",
+    "# Display all feature-target contingency tables \n",
+    "for (feature, target) in contingency_tables.keys():\n",
+    "    display(contingency_tables[(feature, target)].map(lambda x: f\"{x * 100:.1f}\"))"
    ]
   },
   {
