In machine_learning_template.ipynb > EDA > Bivariate > Categorical x Categorical > Contingency Tables: Add function to create heatmap of a contingency table

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2643,7 +2643,9 @@
     "    <h4 style=\"margin:0px\">Contingency Tables</h4>\n",
     "</div> \n",
     "\n",
-    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">📌 Contingency tables between all categorical features and the categorical target variable.</p> "
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Contingency tables between all categorical features and the target variable for machine learning projects with a categorical target.\n",
+    "</p> "
    ]
   },
   {
@@ -2689,6 +2691,66 @@
     "# Display all feature-target contingency tables \n",
     "for (feature, target) in contingency_tables.keys():\n",
     "    display(contingency_tables[(feature, target)].map(lambda x: f\"{x * 100:.1f}\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52ce73bd-9ca4-4767-ab6b-ade2eaf2f50d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to create heatmap of a contingency table\n",
+    "def plot_crosstab_heatmap(contingency_table, safe_to_file=False):\n",
+    "    # Get number of categories\n",
+    "    n_categories_feature = contingency_table.index.nunique()\n",
+    "    n_categories_target = contingency_table.columns.nunique()\n",
+    "    \n",
+    "    # Set the figure size based on number of categories\n",
+    "    if n_categories_feature > 4:\n",
+    "        plt.figure(figsize=(n_categories_target * 1.5, n_categories_feature * 0.4))\n",
+    "    else:\n",
+    "        plt.figure(figsize=(n_categories_target * 2, n_categories_feature * 0.8))\n",
+    "\n",
+    "    # Create heatmap (formatted as percent with 1 decimal)\n",
+    "    ax = sns.heatmap(contingency_table, annot=True, fmt=\".1%\", cmap=\"viridis\", cbar=False, linewidth=0.5)\n",
+    "\n",
+    "    # Customize title and axes labels\n",
+    "    feature_name = contingency_table.index.name.title().replace(\"_\", \" \")\n",
+    "    target_name = contingency_table.columns.name.title().replace(\"_\", \" \")\n",
+    "    ax.set_title(f\"{target_name} Distribution Within {feature_name}\", fontsize=14)\n",
+    "    ax.set_xlabel(target_name, fontsize=12) \n",
+    "    ax.set_ylabel(feature_name, fontsize=12) \n",
+    "\n",
+    "    # Customize axes tick labels\n",
+    "    formatted_xticklabels = [label.get_text().title().replace(\"_\", \" \") for label in ax.get_xticklabels()]\n",
+    "    formatted_yticklabels = [label.get_text().title().replace(\"_\", \" \") for label in ax.get_yticklabels()]\n",
+    "    ax.set_xticklabels(formatted_xticklabels, fontsize=10)\n",
+    "    ax.set_yticklabels(formatted_yticklabels, rotation=0, fontsize=10)\n",
+    "\n",
+    "    # Save the plot to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Contingency table heatmap saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving contingency table heatmap: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving contingency table heatmap to file: '{image_path}' already exists.\")\n",
+    "\n",
+    "    # Show heatmap\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# Use function to create a contingency table heatmap of a single categorical feature with the categorical target variable  \n",
+    "plot_crosstab_heatmap(contingency_tables[\"categorical_feature\", \"categorical_target\"])\n",
+    "\n",
+    "# Use function to create contingency table heatmaps of all categorical features with the categorical target variable \n",
+    "for (feature, target) in contingency_tables.keys():\n",
+    "    plot_crosstab_heatmap(contingency_tables[feature, target])"
    ]
   },
   {
