--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2142,7 +2142,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Numerical x Numerical</h3>\n",
+    "    <h3 style=\"margin:0px\">Numerical vs. Numerical</h3>\n",
     "</div> \n",
     "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
@@ -2406,7 +2406,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Numerical x Categorical</h3>\n",
+    "    <h3 style=\"margin:0px\">Numerical vs. Categorical</h3>\n",
     "</div> \n",
     "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
@@ -2626,7 +2626,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Categorical x Categorical</h3>\n",
+    "    <h3 style=\"margin:0px\">Categorical vs. Categorical</h3>\n",
     "</div>\n",
     "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
