In machine_learning_template.ipynb > EDA > Bivariate > Categorical x Categorical > Contingency Tables: Customize individual contingency table heatmaps for better interpretability

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2755,6 +2755,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ffdb85a9-8b63-4527-8c7a-d52a965301dd",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Customize individual contingency table heatmaps for better interpretability. <br><br>\n",
+    "    💡 Example: Display only the top and bottom 5 feature categories ranked by target frequency for high-cardinality features.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45caec30-a1e0-43d4-be76-d6640c515b35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create contingency table with percentage distribution of the target variable within each category of the feature \n",
+    "contingency_table = pd.crosstab(df_train[\"categorical_feature\"], df_train[\"categorical_target\"], normalize=\"index\")\n",
+    "\n",
+    "# Sort feature categories from highest to lowest target frequency (class 1 for binary target)\n",
+    "contingency_table = contingency_table.sort_values(by=1, ascending=False)\n",
+    "\n",
+    "# Filter feature categories with 5 highest and 5 lowest target frequencies\n",
+    "contingency_table = pd.concat([contingency_table.head(5), contingency_table.tail(5)])\n",
+    "\n",
+    "# Create heatmap of contingency table \n",
+    "plot_crosstab_heatmap(contingency_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7b9f0aa9-d935-47cb-934c-7c42249fc423",
    "metadata": {},
    "source": [
