In machine_learning_template.ipynb > EDA > Bivariate > Categorical vs Categorical > Visualize Relationships section: Reorder section and first create grouped bar plot matrix followed by individual plots for customization

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2644,7 +2644,7 @@
     "</div> \n",
     "\n",
     "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
-    "    📌 Contingency tables between all categorical features and the target variable for machine learning projects with a categorical target.\n",
+    "    📌 Contingency tables between all categorical feature-target pairs for machine learning projects with a categorical target variable.\n",
     "</p> "
    ]
   },
@@ -2760,7 +2760,7 @@
    "source": [
     "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
     "    📌 Customize individual contingency table heatmaps for better interpretability. <br><br>\n",
-    "    💡 Example: Display only the top and bottom 5 feature categories ranked by target frequency for high-cardinality features.\n",
+    "    💡 Example: Display only the top and bottom 5 feature categories ranked by target frequency (useful for high-cardinality features).\n",
     "</p>"
    ]
   },
@@ -2793,32 +2793,6 @@
     "    <h4 style=\"margin:0px\">Visualize Relationships</h4>\n",
     "</div>\n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Grouped bar plot between two categorical columns. \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df1bbb83-5b85-4825-89f0-23994b13b22f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Grouped bar plot \n",
-    "contingency_table.plot(kind=\"bar\")\n",
-    "plt.title(f\"{contingency_table.index.name.title()} vs. {contingency_table.columns.name.title()}\")\n",
-    "plt.xlabel(contingency_table.index.name.title())\n",
-    "plt.ylabel(\"Frequency (%)\")\n",
-    "plt.legend(title=f\"{contingency_table.columns.name.title()}\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0b0192da-1297-4ca3-8523-014a630298a5",
-   "metadata": {},
-   "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Grouped bar plot matrix between all pairs of categorical columns. <br><br>\n",
     "    💡 For example, 6 categorical columns would result in 15 grouped bar plots in a 5x3 matrix.\n",
@@ -2870,6 +2844,32 @@
     "\n",
     "# Use function to create grouped bar plot matrix \n",
     "grouped_barplot_matrix(df_train, categorical_columns + boolean_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "916000d9-45d4-4a14-9b31-777bd511320c",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Grouped bar plot between two categorical columns. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df1bbb83-5b85-4825-89f0-23994b13b22f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grouped bar plot \n",
+    "contingency_table.plot(kind=\"bar\")\n",
+    "plt.title(f\"{contingency_table.index.name.title()} vs. {contingency_table.columns.name.title()}\")\n",
+    "plt.xlabel(contingency_table.index.name.title())\n",
+    "plt.ylabel(\"Frequency (%)\")\n",
+    "plt.legend(title=f\"{contingency_table.columns.name.title()}\")\n",
+    "plt.show()"
    ]
   },
   {
